sec upload with spacing correction

--- a/css/invprojstyle.css
+++ b/css/invprojstyle.css
@@ -105,7 +105,7 @@ body {
 }
 
 .bbrownies {
-    background-image: url(../images/brownies.jpg);
+    background-image: url(../images/choc.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     border: 5px solid black;
@@ -224,7 +224,7 @@ body {
 
 .ctail {
     width: 330px;
-    height 350px;
+    height 370px;
     background-color: #FE960A;
     box-shadow: 5px 5px black;
 }
@@ -267,17 +267,17 @@ body {
 
 #backto {
     width: 350px;
-    height: 80px;
+    height: 90px;
     margin-top: 125px;
     background-color: #FE960A;
     padding-top: 20px;
     padding-left: 25px;
     box-shadow: 5px 5px black;
 }
-
+/* Dinner page begins here*/
 .apps {
     background-color: #FE960A;
-    height: 900px;
+    height: 940px;
     width: 650px;
     padding-top: 15px;
     float: left;
@@ -317,7 +317,7 @@ body {
 
 .dmains {
     width: 400px;
-    height: 570px;
+    height: 600px;
     margin-left: 20px;
     padding-left: 30px;
     float: right;
@@ -332,7 +332,7 @@ body {
 
 .ddesserts {
     width: 250px;
-    height: 500px;
+    height: 520px;
     float: left;
     margin-left: 45px;
     padding-left: 20px;
@@ -352,12 +352,13 @@ body {
     float: right;
     margin-right: 155px;
     box-shadow: 5px 5px black;
-    text-shadow: 0 0 10px blue, 0 0 10px red
+    text-shadow: 0 0 10px blue, 0 0 10px red;
+    clear: both;
 }
 
 #dbackto {
     width: 350px;
-    height: 80px;
+    height: 90px;
     margin-top: 125px;
     background-color: #FE960A;
     padding-top: 20px;
